--- a/nextjs-template/package.json.hbs
+++ b/nextjs-template/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "{{project-name}}",
+  "name": "{{project_name}}",
   "description": "{{project_description}}",
   "version": "0.1.0",
   "private": true,
@@ -29,6 +29,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
+    {{#if (eq use_db "Yes")}}
     "prisma": "^6.19.0"
+    "@prisma/client": "^6.19.0",
+    {{/if}}
   }
 }
