--- a/nextjs-template/package.json.hbs
+++ b/nextjs-template/package.json.hbs
@@ -30,7 +30,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     {{#if (eq use_db "Yes")}}
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
     "@prisma/client": "^6.19.0",
     {{/if}}
   }
