--- a/nextjs-template/package.json.hbs
+++ b/nextjs-template/package.json.hbs
@@ -28,10 +28,13 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
+    {{#if (eq use_db "No")}}
+    "typescript": "^5"
+    {{/if}}
     {{#if (eq use_db "Yes")}}
+    "typescript": "^5",
     "prisma": "^6.19.0",
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^6.19.0"
     {{/if}}
   }
 }
